--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <body>
-<div data-ride="carousel" class="carousel slide" id="carousel-example-generic">
+<!-- <div data-ride="carousel" class="carousel slide" id="carousel-example-generic">
   <ol class="carousel-indicators">
     <li class="" data-slide-to="0" data-target="#carousel-example-generic"></li>
     <li data-slide-to="1" data-target="#carousel-example-generic" class="active"></li>
@@ -25,7 +25,7 @@
   <a data-slide="next" role="button" href="#carousel-example-generic" class="right carousel-control">
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
-</div>
+</div> -->
 <br>
 <div class="panel panel-default">  
   <div class="panel-body">
