--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,11 +1,22 @@
-<div class="border-form-div">
-  <h2>Cadastro</h2>
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<div class="panel panel-info">  
+  <div class="panel-body">
+  <div class="col-sm-8">
+    <h2>Cadastro de Usuário</h2>
+    <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
+    <br>
+    <strong>E-mail: </strong>
     <%= f.email_field :email, :autofocus => true, :placeholder => 'E-mail', :class => "form-control" %>
+    <br>
+    <strong>Senha: </strong>
     <%= f.password_field :password, :placeholder => 'Senha', :class => "form-control" %>
+    <br>
+    <strong>Senha(Confirmação): </strong>
     <%= f.password_field :password_confirmation, :placeholder => 'Repita a senha', :class => "form-control" %>
+    <br>
+    <%= f.input :role, label: "Tipo de Usuário: ", collection: User.role, :placeholder => 'Tipo de Usuário'%>
     <br>
     <%= f.submit "Cadastrar",:class=>'btn btn-primary' %>
   <% end %>
+</div>
 </div>
