--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,22 +34,23 @@
                 <li class="dropdown-header">Por Categoria</li>
                 <li><a href="#">Carros</a></li>
                 <li><a href="#">Motos</a></li>
-                <li><a href="#">4x4</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Outros</li>
-                <li><%= link_to "Opcionais",    opcionais_path %></li>
+                <li><a href="#">4x4</a></li>              
               </ul>
           </li>
 
+        <li><%= link_to "Alugar Veiculos", lista_carros_path %></li> 
+         
         <% if current_user && current_user.is_admin? %>  
           <li><%= link_to "Locadoras",    locadoras_path %></li>
           <li><%= link_to "Clientes",    clientes_path %></li>
           <li><%= link_to "Categorias",    categorias_path %></li>  
           <li><%= link_to "Endereços",    enderecos_path %></li>
+          <li><%= link_to "Opcionais",    opcionais_path %></li>
         <% end %>
         
         <% if current_user && current_user.is_locadora? %>  
           <li><%= link_to "Garagens",    garagens_path %></li>
+          <li><%= link_to "Opcionais",    opcionais_path %></li>
         <% end %>
 
       </ul>
