--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,5 @@
 <ul class="nav nav-tabs" role="tablist">
   <li class="active"><a href="#">Ferramentas</a></li>
-  <li><a href="#">Veiculos Alugados</a></li>
   <li><a href="#">Estatisticas</a></li>
 </ul>
 <br>
@@ -21,9 +20,20 @@
       </div>
     </div><!-- final -->
 
+
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title">Outros dados</h3>
+        <h3 class="panel-title">Locadoras Cadastradas</h3>
+      </div>
+      <div class="panel-body">
+        <p>Dados </p>
+        <p>Datas </p>
+      </div>
+    </div>
+
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">Usuários Cadastrados</h3>
       </div>
       <div class="panel-body">
         <p>Dados </p>
@@ -31,6 +41,7 @@
       </div>
     </div>
   </div><!-- /.col-sm-4 -->
+  
 
   <div class="col-sm-8">  
     <div class="panel panel-info">
@@ -43,5 +54,7 @@
         <p>Dados de pagamento do aluguel</p>
       </div>
     </div>
-  </div><!-- /.col-sm-4 -->      
+  </div><!-- /.col-sm-4 -->    
+
 </div>
+
