--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= stylesheet_link_tag "application", media: "all",
                                            "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
     <%= csrf_meta_tags %>
   </head>
   <body>          
@@ -18,10 +19,11 @@
     <%= render 'layouts/header' %>
     <br>
     <%= render partial: "layouts/flash_messages", flash: flash %> 
-    <%= yield %>
-    <br><br>
+    <%= yield %>  
+    <br><br>        
     </div>
   </body>
+
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
