--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,91 +27,53 @@
   </a>
 </div> -->
 <br>
-<div class="panel panel-default">  
-  <div class="panel-body">
-    <div class="col-sm-8">
-      <h1>Consulte um veiculo</h1>
-      <strong>Campo 1</strong>
-      <br>
-      <input class="form-control" >
-      <br><br>
-      <strong>Campo 2</strong>
-      <br>
-      <input class="form-control" >
-      <br><br> 
-      <strong>Campo 3</strong>
-      <br>
-      <input class="form-control" >
-      <br><br>
-      <button class="btn btn-primary btn-lg">Consultar</button>
-      <%= link_to 'Alugar Veiculo', new_aluguel_path, class: "btn btn-primary btn-lg" %>
-    </div>
-  </div>
-</div>
-  
-    <div class="row">
-      <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-          <%= image_tag("rx7.jpg", :alt => "rss feed") %>      
-          <div class="caption">
-            <h3>Veiculo</h3>
-            <p>Marca: Mazda</p>
-            <p>Modelo: RX-7</p>
-            <p><a href="#" class="btn btn-primary" role="button">Alugar</a> <a href="#" class="btn btn-default" role="button">Detalhes</a></p>
-          </div>
+<div class="row">
+
+  <div class="col-sm-8">
+    <div class="panel panel-default">  
+      <div class="panel-body">
+        <div class="col-sm-8">
+          <h1>Consulte um veiculo</h1>
+          <strong>Campo 1</strong>
+          <br>
+          <input class="form-control" >
+          <br><br>
+          <strong>Campo 2</strong>
+          <br>
+          <input class="form-control" >
+          <br><br> 
+          <strong>Campo 3</strong>
+          <br>
+          <input class="form-control" >
+          <br><br>
+          <button class="btn btn-primary btn-lg">Consultar</button>          
         </div>
       </div>
-      <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <%= image_tag("mille.jpg", :alt => "rss feed") %>      
-            <div class="caption">
-              <h3>Veiculo</h3>
-              <p>Marca: Fiat</p>
-              <p>Modelo: UNO</p>
-              <p><a href="#" class="btn btn-primary" role="button">Alugar</a> <a href="#" class="btn btn-default" role="button">Detalhes</a></p>
-            </div>
-          </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-          <%= image_tag("p208.jpg", :alt => "rss feed") %>      
-          <div class="caption">
-          <h3>Veiculo</h3>
-          <p>Marca: Pegeout</p>
-          <p>Modelo: 208</p>
-          <p><a href="#" class="btn btn-primary" role="button">Alugar</a> <a href="#" class="btn btn-default" role="button">Detalhes</a></p>
-          </div>
-        </div>
-      </div>    
     </div>
-
-    <br>
-
-    <div class="row">
-      <div class="col-lg-4">
-        <%= image_tag("rx7.jpg", :style => "width: 140px; height: 140px;", :class => "img-circle", :alt => "rss feed") %>      
-        <h2>Veiculo</h2>
-        <p>Marca: Mazda</p>
-        <p>Modelo: RX-7</p>
-        <p><a role="button" href="#" class="btn btn-default">Mais detalhes »</a></p>
-    </div><!-- /.col-lg-4 -->
-
-    <div class="col-lg-4">
-      <%= image_tag("mille.jpg", :style => "width: 140px; height: 140px;", :class => "img-circle", :alt => "rss feed") %>      
-      <h2>Veiculo</h2>
-      <p>Marca: Fiat</p>
-      <p>Modelo: UNO</p>
-      <p><a role="button" href="#" class="btn btn-default">Mais detalhes »</a></p>
-    </div><!-- /.col-lg-4 -->
-
-    <div class="col-lg-4">
-      <%= image_tag("p208.jpg", :style => "width: 140px; height: 140px;", :class => "img-circle", :alt => "rss feed") %>      
-      <h2>Veiculo</h2>
-      <p>Marca: Pegeout</p>
-      <p>Modelo: 208</p>
-      <p><a role="button" href="#" class="btn btn-default">Mais detalhes »</a></p>
-    </div><!-- /.col-lg-4 -->
   </div>
+
+  <div class="col-sm-6 col-md-4">
+      <div class="panel panel-default">
+        <div class="row-1">
+          <%= link_to image_tag("carro.png", :alt => "rss feed"), lista_carros_path %>
+          <%= link_to image_tag("moto.png", :alt => "rss feed"), lista_motos_path %>
+          <%= link_to image_tag("limo.png", :alt => "rss feed") %>  
+        </div>
+        <div class="row-2">
+          <%= image_tag("4x4.png", :alt => "rss feed") %>
+          <%= image_tag("cabine_estendida.png", :alt => "rss feed") %>
+          <%= image_tag("van2.png", :alt => "rss feed") %>
+        </div> 
+        <div class="row-3">
+          <%= link_to image_tag("van.png", :alt => "rss feed"), lista_van_path %>
+          <%= image_tag("frete.png", :alt => "rss feed") %>
+          <%= image_tag("carro.png", :alt => "rss feed") %>
+        </div>           
+      </div>
+  </div>
+</div>     
+
+
 
 </body>
 </html>        
