--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,15 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="panel panel-info">  
+  <div class="panel-body">
+  <div class="col-sm-8">
+	<h2>Esqueceu a senha?</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+	<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+	  <%= f.error_notification %>
+	  <br>
+	  <strong>*E-mail: </strong>
+    <%= f.email_field :email, :autofocus => true, :placeholder => 'E-mail', :class => "form-control" %>
+    <br>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+	  <div class="form-actions">
+	    <%= f.button :submit, "Enviar e-mail com instruções para resetar senha",:class=>'btn btn-primary' %>
+	  </div>
+	<% end %>
+	<br>
+	<%= render "users/shared/links" %>
+	</div>
+	</div>
+</div>
