--- a/app/views/veiculos/_form.html.erb
+++ b/app/views/veiculos/_form.html.erb
@@ -37,8 +37,10 @@
 
           <%= f.label :alugado %><br>
 
+
           <%= f.check_box :alugado %>
-          
+          <%= f.file_field :foto %>
+
         </div>
         <div class="actions">
           <%= f.button :submit,"Salvar", class: 'btn btn-success' %>
