--- a/app/views/veiculos/edit.html.erb
+++ b/app/views/veiculos/edit.html.erb
@@ -3,7 +3,13 @@
   <div class="col-sm-8">
 		<h1>Editando Veiculo</h1>
 		<br>
-
+		<div class="row">
+		  <div class="col-sm-6 col-md-8">
+		    <div class="thumbnail">
+		      <%= image_tag @veiculo.foto.url(:medium) %>   
+		    </div> 
+		  </div>  
+		</div>
 		<%= render 'form' %>
 	</div>
 </div>
