--- a/app/views/alugueis/new.html.erb
+++ b/app/views/alugueis/new.html.erb
@@ -1,6 +1,10 @@
-<h1>Aluguel</h1>
-<br>
-<%= render 'form' %>
-
-
+<div class="panel panel-info">
+	<div class="panel-body">
+		<div class="col-sm-8">
+			<h2>Alugar Veículo</h2>
+			<br>
+			<%= render 'form' %>
+		</div>
+	</div>
+</div>
 
