vinculacao de clientes e locadoras ao usuario

--- a/app/views/locadoras/edit.html.erb
+++ b/app/views/locadoras/edit.html.erb
@@ -4,5 +4,8 @@
 		<h1>Editando Locadora</h1>
 		<br>
 		<%= render 'form' %>
+		<div class="actions" style="margin-top: 100px;">
+			<%= link_to 'Voltar', locadoras_path,  class: "btn btn-default" %>
+		</div>
 	</div>
 </div>
