--- a/app/views/locadoras/show.html.erb
+++ b/app/views/locadoras/show.html.erb
@@ -1,59 +1,67 @@
-<p id="notice"><%= notice %></p>
+<div class="panel panel-info">  
+  <div class="panel-body">
+    <div class="col-sm-16">
+      <h1>Passo 1 - Cadastro Perfil Locadora</h1>
+      <br>
+      <strong>Dados Cadastrados</strong>
+      <br><br>
+        <p>
+          <strong>Cnpj:</strong>
+          <%= @locadora.cnpj %>
+        </p>
 
-<p>
-  <strong>Cnpj:</strong>
-  <%= @locadora.cnpj %>
-</p>
+        <p>
+          <strong>Nome:</strong>
+          <%= @locadora.nome %>
+        </p>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @locadora.nome %>
-</p>
+        <p>
+          <strong>Responsável:</strong>
+          <%= @locadora.responsavel %>
+        </p>
 
-<p>
-  <strong>Responsável:</strong>
-  <%= @locadora.responsavel %>
-</p>
+        <p>
+          <strong>Email:</strong>
+          <%= @locadora.email %>
+        </p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @locadora.email %>
-</p>
+        <p>
+          <strong>Telefone:</strong>
+          <%= @locadora.telefone %>
+        </p>
 
-<p>
-  <strong>Telefone:</strong>
-  <%= @locadora.telefone %>
-</p>
+        <p>
+          <strong>CEP:</strong>
+          <%= @locadora.endereco.cep %>
+        </p>
 
-<p>
-  <strong>CEP:</strong>
-  <%= @locadora.endereco.cep %>
-</p>
+        <p>
+          <strong>Logradouro:</strong>
+          <%= @locadora.endereco.rua %>
+        </p>
 
-<p>
-  <strong>Logradouro:</strong>
-  <%= @locadora.endereco.rua %>
-</p>
+        <p>
+          <strong>Bairro:</strong>
+          <%= @locadora.endereco.bairro %>
+        </p>
 
-<p>
-  <strong>Bairro:</strong>
-  <%= @locadora.endereco.bairro %>
-</p>
+        <p>
+          <strong>Número:</strong>
+          <%= @locadora.endereco.numero %>
+        </p>
 
-<p>
-  <strong>Número:</strong>
-  <%= @locadora.endereco.numero %>
-</p>
+        <p>
+          <strong>Cidade:</strong>
+          <%= @locadora.endereco.cidade %>
+        </p>
 
-<p>
-  <strong>Cidade:</strong>
-  <%= @locadora.endereco.cidade %>
-</p>
-
-<p>
-  <strong>Estado:</strong>
-  <%= @locadora.endereco.estado %>
-</p>
-
-<%= link_to 'Editar', edit_locadora_path(@locadora),class: "btn btn-default btn-sm"  %>
+        <p>
+          <strong>Estado:</strong>
+          <%= @locadora.endereco.estado %>
+        </p>
+        <br>
+        <%= link_to 'Continuar - Passo 2', new_user_registration_path(:locadora_id => @locadora.id, :cliente_id => 1), class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
 
