--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -1,69 +1,76 @@
-<p id="notice"><%= notice %></p>
+<div class="panel panel-info">  
+  <div class="panel-body">
+    <div class="col-sm-16">
+      <h1>Passo 1 - Cadastro Perfil Cliente</h1>
+      <br>
+      <p>Dados Pessoais Cadastrados</p>
+      <p>
+        <strong>Nome:</strong>
+        <%= @cliente.nome %>
+      </p>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @cliente.nome %>
-</p>
+      <p>
+        <strong>Cpf:</strong>
+        <%= @cliente.cpf %>
+      </p>
 
-<p>
-  <strong>Cpf:</strong>
-  <%= @cliente.cpf %>
-</p>
+      <p>
+        <strong>Dt nascimento:</strong>
+        <%= @cliente.dt_nascimento %>
+      </p>
 
-<p>
-  <strong>Dt nascimento:</strong>
-  <%= @cliente.dt_nascimento %>
-</p>
+      <p>
+        <strong>Sexo:</strong>
+        <%= @cliente.sexo %>
+      </p>
 
-<p>
-  <strong>Sexo:</strong>
-  <%= @cliente.sexo %>
-</p>
+      <p>
+        <strong>Email:</strong>
+        <%= @cliente.email %>
+      </p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @cliente.email %>
-</p>
+      <p>
+        <strong>Endereco:</strong>
+        <%= @cliente.endereco_id %>
+      </p>
 
-<p>
-  <strong>Endereco:</strong>
-  <%= @cliente.endereco_id %>
-</p>
+      <p>
+        <strong>Nr habilitacao:</strong>
+        <%= @cliente.nr_habilitacao %>
+      </p>
 
-<p>
-  <strong>Nr habilitacao:</strong>
-  <%= @cliente.nr_habilitacao %>
-</p>
+      <p>
+        <strong>CEP:</strong>
+        <%= @cliente.endereco.cep %>
+      </p>
 
-<p>
-  <strong>CEP:</strong>
-  <%= @cliente.endereco.cep %>
-</p>
+      <p>
+        <strong>Logradouro:</strong>
+        <%= @cliente.endereco.rua %>
+      </p>
 
-<p>
-  <strong>Logradouro:</strong>
-  <%= @cliente.endereco.rua %>
-</p>
+      <p>
+        <strong>Bairro:</strong>
+        <%= @cliente.endereco.bairro %>
+      </p>
 
-<p>
-  <strong>Bairro:</strong>
-  <%= @cliente.endereco.bairro %>
-</p>
+      <p>
+        <strong>Número:</strong>
+        <%= @cliente.endereco.numero %>
+      </p>
 
-<p>
-  <strong>Número:</strong>
-  <%= @cliente.endereco.numero %>
-</p>
+      <p>
+        <strong>Cidade:</strong>
+        <%= @cliente.endereco.cidade %>
+      </p>
 
-<p>
-  <strong>Cidade:</strong>
-  <%= @cliente.endereco.cidade %>
-</p>
-
-<p>
-  <strong>Estado:</strong>
-  <%= @cliente.endereco.estado %>
-</p>
-
-<%= link_to 'Editar', edit_cliente_path(@cliente), class: "btn btn-default btn-sm" %>
-
+      <p>
+        <strong>Estado:</strong>
+        <%= @cliente.endereco.estado %>
+      </p>
+      <p>Clique em continuar para seguir ao passo 2.</p>
+      <!--<%= link_to 'Editar', edit_cliente_path(@cliente), class: "btn btn-default btn-sm" %> -->
+      <%= link_to 'Continuar - Passo 2', new_user_registration_path(:cliente_id => @cliente.id, :locadora_id => 1), class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
