--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
           <%= link_to 'Editar conta', edit_user_registration_path, :class => 'btn btn-xs btn-default' %> 
           <%= link_to "Sair", destroy_user_session_path, method: :delete, :class => 'btn btn-xs btn-default'  %>
         <% else %>
-          <%= link_to "Cadastar", new_user_registration_path, :class => 'btn btn-xs btn-default'  %> 
+          <%= link_to "Cadastar", cadastro_usuario_path, :class => 'btn btn-xs btn-default'  %> 
           <%= link_to "Login", new_user_session_path, :class => 'btn btn-xs btn-default'  %>
         <% end %>
       </p>   
