--- a/app/views/locadoras/new.html.erb
+++ b/app/views/locadoras/new.html.erb
@@ -5,6 +5,9 @@
 			<br>
 
 			<%= render 'form' %>
+			<div class="actions" style="margin-top: 100px;">			
+			<%= link_to 'Voltar', locadoras_path,  class: "btn btn-default" %>
+		</div>
 		</div>
   </div>
 </div>
