--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,9 @@
 <div class="panel panel-info">  
   <div class="panel-body">
   <div class="col-sm-8">
-    <h2>Cadastro de Usuário</h2>
+    <h2>Passo 2 - Cadastro de Usuário e Senha</h2>
+    <p>Preencha os dados para completar o cadastro.</p>
+    <br>
     <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
     <br>
@@ -15,8 +17,12 @@
     <%= f.password_field :password_confirmation, :placeholder => 'Repita a senha', :class => "form-control" %>
     <br>
     <%= f.input :role, label: "Tipo de Usuário: ", collection: User.role, :placeholder => 'Tipo de Usuário'%>
-    <br>
-    <%= f.submit "Cadastrar",:class=>'btn btn-primary' %>
+    <br>    
+    <%= f.hidden_field :locadora_id, :value => @locadora.id%>
+    <%= f.hidden_field :cliente_id, :value => @cliente.id%>
+   
+
+    <%= f.button :submit,'Cadastrar', class: 'btn btn-success' %>
     <% end %>
   </div>
   </div>
