ajustes em telas e populando a base de dados

--- a/app/views/clientes/cadastro_perfil_cliente.html.erb
+++ b/app/views/clientes/cadastro_perfil_cliente.html.erb
@@ -39,7 +39,7 @@
 				<br>
 				<br>
 				<div class="actions">
-					<%= f.button :submit,'Confirmar Dados', class: 'btn btn-success' %>
+					<%= f.button :submit,'Confirmar Dados', class: 'btn btn-primary' %>
 				</div>
 			</div>
 			<div style="width: 48%;display: inline-block;float: right">
