--- a/app/views/locadoras/cadastro_perfil_locadora.html.erb
+++ b/app/views/locadoras/cadastro_perfil_locadora.html.erb
@@ -31,7 +31,7 @@
 					<%= f.input :telefone, label: 'Telefone', input_html: {class: 'form-control'} %>	
 
 					<div class="actions" style="margin-top: 100px;">
-						<%= f.button :submit,'Confirmar Dados', class: 'btn btn-success' %>	
+						<%= f.button :submit,'Confirmar Dados', class: 'btn btn-primary' %>	
 						
 					</div>
 					
