--- a/app/views/static_pages/lista_frete_frigo.html.erb
+++ b/app/views/static_pages/lista_frete_frigo.html.erb
@@ -1,12 +1,12 @@
 <ul role="tablist" class="nav nav-tabs">
   <li><a data-toggle="tab" href="#carros">Carros</a></li>
-  <li class="active"><a data-toggle="tab" href="#motos">Motos</a></li>
+  <li><a data-toggle="tab" href="#motos">Motos</a></li>
   <li><a data-toggle="tab" href="#vans">Vans</a></li>
   <li><a data-toggle="tab" href="#pickups">Pickups</a></li>
   <li><a data-toggle="tab" href="#limos">Limozines</a></li>
   <li><a data-toggle="tab" href="#familia">Familia</a></li>
   <li><a data-toggle="tab" href="#frete_c">Frete Comum</a></li>
-  <li><a data-toggle="tab" href="#frete_f">Frete Frigorifico</a></li>
+  <li class="active"><a data-toggle="tab" href="#frete_f">Frete Frigorifico</a></li>
 </ul>
 <br>
 
@@ -36,7 +36,7 @@
     </div>
 
 <!-- Filtrar por motos -->
-    <div id="motos" class="tab-pane fade in active">
+    <div id="motos" class="tab-pane fade">
       <% @motos.each do |moto| %>
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
@@ -152,7 +152,7 @@
       <% end %>
     </div>
 
-    <div id="frete_c" class="tab-pane fade">
+    <div id="frete_c" class="tab-pane fadee">
       <% @frete_comun.each do |frete_c| %>
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
@@ -176,7 +176,7 @@
       <% end %>
     </div>
 
-    <div id="frete_f" class="tab-pane fade">
+    <div id="frete_f" class="tab-pane fade in active">
       <% @frete_frigo.each do |frete_f| %>
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
