--- a/app/views/static_pages/lista_veiculos.html.erb
+++ b/app/views/static_pages/lista_veiculos.html.erb
@@ -1,6 +1,6 @@
 <ul role="tablist" class="nav nav-tabs">
-  <li><a data-toggle="tab" href="#carros">Carros</a></li>
-  <li class="active"><a data-toggle="tab" href="#motos">Motos</a></li>
+  <li class="active"><a data-toggle="tab" href="#carros">Carros</a></li>
+  <li><a data-toggle="tab" href="#motos">Motos</a></li>
   <li><a data-toggle="tab" href="#vans">Vans</a></li>
   <li><a data-toggle="tab" href="#pickups">Pickups</a></li>
   <li><a data-toggle="tab" href="#limos">Limozines</a></li>
@@ -12,7 +12,7 @@
 
 <div class="tab-content">
 
-    <div id="carros" class="tab-pane fade">
+    <div id="carros" class="tab-pane fade in active">
         <% @carros.each do |carro| %>
           <div class="col-sm-6 col-md-4">
               <div class="thumbnail">
@@ -36,7 +36,7 @@
     </div>
 
 <!-- Filtrar por motos -->
-    <div id="motos" class="tab-pane fade in active">
+    <div id="motos" class="tab-pane fade">
       <% @motos.each do |moto| %>
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
