--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -6,7 +6,7 @@
     <%= f.error_notification %>
   <div class="col-sm-8">
     <div class="form-inputs">
-      <strong>Nome Cliente: </strong>
+      <strong>Nome: </strong>
       <p><%= @user.cliente.nome %> </p>
       <strong>E-mail</strong>
       <%= f.email_field :email, required: true, autofocus: true, :class => "form-control" %>
